# public-demos

./: .gitattributes  .gitignore  LICENSE.txt
Example2D3DRegistration/: Custom2D3DRegistrationInitialization.h  Example2D3DRegistrationAlgorithm.h  Example2D3DRegistrationController.h  Example2D3DRegistrationFactory.h  Example2D3DRegistrationPlugin.h
ExampleAnatomyPlugin/: CMakeLists.txt  DemoAnatomyAlgorithm.cpp  DemoAnatomyAlgorithm.h  DemoAnatomyFactory.cpp  DemoAnatomyFactory.h  DemoAnatomyPlugin.cpp  DemoAnatomyPlugin.h  README.md  asc.imf  meshes.imf
ExampleDicomBrowser/: CMakeLists.txt  DicomBrowser.cpp  DicomBrowser.h  README.md
ExampleDicomExtension/: CMakeLists.txt  DemoDataComponent.h  DemoDicomExtensionFactory.cpp  DemoDicomExtensionFactory.h  DemoDicomExtensionPlugin.cpp  DemoDicomExtensionPlugin.h  DemoExtension.h  README.md
ExampleITK/: ITK.h  ITKCannyEdgeAlgorithm.h  ITKFactory.h
ExampleImageMath/: CMakeLists.txt  DemoImageMathAlgorithm.cpp  DemoImageMathAlgorithm.h  DemoImageMathFactory.cpp  DemoImageMathFactory.h  DemoImageMathPlugin.cpp  DemoImageMathPlugin.h  README.md
ExampleMachineLearningInference/: MachineLearningInferenceFactory.h  RunPretrainedModelAlgorithm.h
ExampleMainWindowBaseApplication/: DemoMainWindowBase.cpp  DemoMainWindowBase.h
ExampleOpenCV/: OpenCVFactory.h
ExampleOpenGL/: CMakeLists.txt  DemoOpenGLAlgorithm.cpp  DemoOpenGLAlgorithm.h  DemoOpenGLController.cpp  DemoOpenGLController.h  DemoOpenGLFactory.cpp  DemoOpenGLFactory.h  DemoOpenGLPlugin.cpp  DemoOpenGLPlugin.h  MyCustomGlObject.cpp  MyCustomGlObject.h  README.md  myShader.frag
ExamplePlugin/: CMakeLists.txt  DemoAlgorithm.h  DemoController.h  DemoFactory.cpp  DemoFactory.h  DemoPlugin.cpp  DemoPlugin.h  README.md
ExampleStandaloneApplication/: CMakeLists.txt  DemoExecutable.cpp  DemoExecutable.h  README.md
ExampleStreamData/: CMakeLists.txt  DemoStreamDataAlgorithm.cpp  DemoStreamDataAlgorithm.h  DemoStreamDataFactory.cpp  DemoStreamDataFactory.h  DemoStreamDataPlugin.cpp  DemoStreamDataPlugin.h  README.md
TotalSegmentatorAnatomyPlugin/: AnatomyKeys.cpp  AnatomyKeys.h  CMakeLists.txt  README.md  TotalSegmentatorDemoAlgorithm.cpp  TotalSegmentatorDemoAlgorithm.h  TotalSegmentatorDemoFactory.cpp  TotalSegmentatorDemoFactory.h  TotalSegmentatorDemoPlugin.cpp  TotalSegmentatorDemoPlugin.h
